fix fullscreen button with IE

--- a/MediaBrowser.WebDashboard/dashboard-ui/log.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/log.html
@@ -4,7 +4,7 @@
     <title>${TitleSupport}</title>
 </head>
 <body>
-    <div id="logPage" data-role="page" class="page type-interior">
+    <div id="logPage" data-role="page" class="page type-interior" data-require="scripts/logpage">
 
         <div data-role="content">
             <div class="content-primary">
@@ -15,10 +15,10 @@
                     <a href="supporterkey.html" data-role="button">${TabSupporterKey}</a>
                     <a href="about.html" data-role="button">${TabAbout}</a>
                 </div>
-                
+
                 <p>${HeaderServerLogFiles}</p>
                 <div class="serverLogs readOnlyContent">
-                    
+
                 </div>
             </div>
         </div>
