--- a/MediaBrowser.WebDashboard/dashboard-ui/tvlatest.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvlatest.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="tvNextUpPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series">
+    <div id="tvNextUpPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series" data-require="scripts/tvlatest">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="tvrecommended.html">${TabSuggestions}</a>
             <a href="#" class="ui-btn-active">${TabLatest}</a>
