--- a/MediaBrowser.WebDashboard/dashboard-ui/streamingsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/streamingsettings.html
@@ -4,7 +4,7 @@
     <title>${TitlePlayback}</title>
 </head>
 <body>
-    <div id="streamingSettingsPage" data-role="page" class="page type-interior playbackConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Streaming">
+    <div id="streamingSettingsPage" data-role="page" class="page type-interior playbackConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Streaming" data-require="scripts/streamingsettings">
 
         <div data-role="content">
             <div class="content-primary">
@@ -39,10 +39,6 @@
                 </form>
             </div>
         </div>
-
-        <script type="text/javascript">
-            $('.streamingSettingsForm').off('submit', StreamingSettingsPage.onSubmit).on('submit', StreamingSettingsPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
