--- a/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
@@ -4,7 +4,7 @@
     <title>${TitleSupport}</title>
 </head>
 <body>
-    <div id="supporterPage" data-role="page" class="page type-interior">
+    <div id="supporterPage" data-role="page" class="page type-interior" data-require="scripts/supporterpage,scripts/registrationservices">
 
         <div data-role="content">
             <div class="content-primary">
@@ -27,7 +27,7 @@
                         <p class="planSummary"></p>
                     </div>
 
-                    <form style="margin-top:1.5em;" name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" class="supporterForm" method="post">
+                    <form style="margin-top:1.5em;" name="_xclick" class="supporterForm" method="post">
 
                         <fieldset data-role="controlgroup">
                             <legend>${HeaderDonationType}</legend>
@@ -53,7 +53,7 @@
                                 </label>
                             </div>
                         </fieldset>
-                        <div class="fieldDescription">${LabelRecurringDonationCanBeCancelledHelp}</div>
+                        <div class="fieldDescription recurringSubscriptionCancellationHelp"></div>
 
                         <fieldset data-role="controlgroup" style="margin-top:1.5em;">
                             <input type="radio" class="radioDonationType" name="radioDonationType" id="radioOneTimeDonation" value="once">
@@ -113,10 +113,6 @@
                 </div>
             </div>
         </div>
-
-        <script type="text/javascript">
-            $('.supporterForm').off('submit', SupporterPage.onSubmit).on('submit', SupporterPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
