--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardsettings.html
@@ -4,14 +4,15 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="wizardSettingsPage" data-role="page" class="page standalonePage wizardPage mediaLibraryPage">
+    <div id="wizardSettingsPage" data-role="page" class="page standalonePage wizardPage mediaLibraryPage" data-require="scripts/wizardsettings">
 
         <div data-role="content">
 
             <div class="ui-corner-all ui-shadow wizardContent">
                 <form class="wizardSettingsForm">
                     <h2>
-                        <img src="css/images/mblogoicon.png" />${LabelConfigureSettings}</h2>
+                        <img src="css/images/mblogoicon.png" />${LabelConfigureSettings}
+                    </h2>
 
                     <br />
                     <div style="margin: 1em 0;">
@@ -45,9 +46,6 @@
             </div>
 
         </div>
-        <script type="text/javascript">
-            $('.wizardSettingsForm').off('submit', WizardSettingsPage.onSubmit).on('submit', WizardSettingsPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
