--- a/MediaBrowser.WebDashboard/dashboard-ui/wizarduser.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizarduser.html
@@ -4,14 +4,15 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="wizardUserPage" data-role="page" class="page standalonePage wizardPage">
+    <div id="wizardUserPage" data-role="page" class="page standalonePage wizardPage" data-require="scripts/wizarduserpage">
 
         <div data-role="content">
 
             <div class="ui-corner-all ui-shadow wizardContent">
-                <form id="wizardUserForm">
+                <form class="wizardUserForm">
                     <h2>
-                        <img src="css/images/mblogoicon.png" style="height: 30px;" />${TellUsAboutYourself}</h2>
+                        <img src="css/images/mblogoicon.png" style="height: 30px;" />${TellUsAboutYourself}
+                    </h2>
 
                     <p>${UserProfilesIntro}</p>
 
@@ -23,7 +24,7 @@
                         </li>
                     </ul>
                     <h2>${HeaderOptionalLinkEmbyAccount}</h2>
-                    <br/>
+                    <br />
                     <ul data-role="listview" class="ulForm">
                         <li>
                             <label for="txtConnectUserName">${LabelConnectUserName}</label>
@@ -43,10 +44,6 @@
             </div>
 
         </div>
-
-        <script type="text/javascript">
-            $('#wizardUserForm').on('submit', WizardUserPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
