--- a/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
@@ -41,7 +41,7 @@
                                 <input type="checkbox" id="chkUpcomingStreamingTrailers" />
                             </fieldset>
                             <div class="fieldDescription">${LabelTheseFeaturesRequireSupporterHelpAndTrailers}</div>
-                            <div class="fieldDescription"><a href="supporter.html">${ButtonLearnMore}</a></div>
+                            <div class="fieldDescription"><a class="lnkSupporterLearnMore" href="supporter.html" style="display:none;">${ButtonLearnMore}</a></div>
                         </li>
                         <li>
                             <label for="chkMyMovieTrailers">${OptionTrailersFromMyMovies}</label>
