--- a/MediaBrowser.WebDashboard/dashboard-ui/log.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/log.html
@@ -11,8 +11,8 @@
                 <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
                     <a href="support.html" data-role="button">${TabGeneral}</a>
                     <a href="log.html" data-role="button" class="ui-btn-active">${TabLogs}</a>
-                    <a href="supporter.html" data-role="button">${TabDonate}</a>
-                    <a href="supporterkey.html" data-role="button">${TabSupporterKey}</a>
+                    <a href="supporter.html" data-role="button" class="tabSupporterMembership">${TabDonate}</a>
+                    <a href="supporterkey.html" data-role="button" class="tabSupporterMembership">${TabSupporterKey}</a>
                     <a href="about.html" data-role="button">${TabAbout}</a>
                 </div>
 
