--- a/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
@@ -13,8 +13,8 @@
                     <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
                         <a href="support.html" data-role="button">${TabGeneral}</a>
                         <a href="log.html" data-role="button">${TabLogs}</a>
-                        <a href="supporter.html" data-role="button" class="ui-btn-active">${TabDonate}</a>
-                        <a href="supporterkey.html" data-role="button">${TabSupporterKey}</a>
+                        <a href="supporter.html" data-role="button" class="ui-btn-active tabSupporterMembership">${TabDonate}</a>
+                        <a href="supporterkey.html" data-role="button" class="tabSupporterMembership">${TabSupporterKey}</a>
                         <a href="about.html" data-role="button">${TabAbout}</a>
                     </div>
 
@@ -55,6 +55,7 @@
                         </fieldset>
                         <div class="fieldDescription recurringSubscriptionCancellationHelp"></div>
 
+                        <!--CORDOVA_EXCLUDE_START-->
                         <fieldset data-role="controlgroup" style="margin-top:1.5em;">
                             <input type="radio" class="radioDonationType" name="radioDonationType" id="radioOneTimeDonation" value="once">
                             <label for="radioOneTimeDonation">
@@ -83,7 +84,6 @@
 
                         <br />
 
-                        <!--CORDOVA_EXCLUDE_START-->
                         <input type="hidden" name="cmd" id="ppCmd" value="_xclick">
                         <input type="hidden" name="business" value="donation@mediabrowser.tv">
                         <input type="hidden" name="currency_code" value="USD">
