--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
@@ -175,10 +175,8 @@
                         <div>
                             <fieldset data-role="controlgroup">
                                 <legend>${LabelExternalPlayers}</legend>
-                                <!--<input type="checkbox" id="chkGoodplayer" class="chkExternalPlayer" data-name="GoodPlayer" data-scheme="goodplayer://{0}" />
-                                    <label for="chkGoodplayer">GoodPlayer</label>-->
-                                <input type="checkbox" id="chkVlc" class="chkExternalPlayer" data-name="Vlc" data-scheme="vlc://{0}" />
-                                <label for="chkVlc">Vlc</label>
+                                <input type="checkbox" id="chkExternalVideoPlayer" />
+                                <label for="chkExternalVideoPlayer">${OptionEnableExternalVideoPlayers}</label>
                             </fieldset>
                             <div style="padding: 0 2px;">${LabelExternalPlayersHelp}</div>
                         </div>
