-Correct black background to fill the view port -Columns display fix

--- a/MediaBrowser.WebDashboard/dashboard-ui/reports.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/reports.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <br />
-            <div class="reporContainer"></div>
+            <div class="reporContainer" style="height:auto"></div>
 
             <div class="listBottomPaging">
             </div>
