update live tv loading

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
@@ -32,6 +32,15 @@
                 </div>
                 <div class="channelPaging"></div>
             </div>
+            <div class="guideRequiresUnlock readOnlyContent" style="margin:2em auto;text-align:center;display:none;">
+                <p class="unlockText"></p>
+                <button class="btn btnActionAccent btnUnlockGuide" data-role="none" type="button">
+                    <span>
+                        ${ButtonUnlockGuide}
+                    </span>
+                    <i class="fa fa-check"></i>
+                </button>
+            </div>
             <div data-role="popup" id="popupConfig" data-theme="b">
                 <div class="ui-bar-a" style="text-align: center; padding: 0 20px; position: relative;">
 
