--- a/MediaBrowser.WebDashboard/dashboard-ui/login.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/login.html
@@ -32,11 +32,9 @@
                 <br />
             </form>
 
-            <div class="visualLoginForm" style="display: none; text-align: center;">
+            <div class="visualLoginForm" style="text-align: center;">
                 <br />
                 <div id="divUsers" class="itemsContainer"></div>
-
-                <p class="localhostMessage" style="text-align: center; display: none;">${PasswordLocalhostMessage}</p>
 
                 <br />
 
