adjust external player label

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="channelPaging"></div>
             </div>
-            <div class="guideRequiresUnlock readOnlyContent" style="margin:2em auto;text-align:center;display:none;">
+            <div class="guideRequiresUnlock readOnlyContent" style="margin:1em auto;text-align:center;display:none;padding:1em;">
                 <p class="unlockText"></p>
                 <button class="btn btnActionAccent btnUnlockGuide" data-role="none" type="button">
                     <span>
