--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
@@ -178,7 +178,8 @@
                                 <input type="checkbox" id="chkExternalVideoPlayer" />
                                 <label for="chkExternalVideoPlayer">${OptionEnableExternalVideoPlayers}</label>
                             </fieldset>
-                            <div style="padding: 0 2px;">${LabelExternalPlayersHelp}</div>
+                            <div style="padding: 0 2px;display:none;" class="labelGenericExternalPlayers">${LabelExternalPlayersHelp}</div>
+                            <div style="padding: 0 2px;display:none;" class="labelNativeExternalPlayers">${LabelNativeExternalPlayersHelp}</div>
                         </div>
                     </div>
                 </div>
