add option to disable sliding menus

--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
@@ -173,6 +173,16 @@
 
                         <br />
                         <div>
+                            <label for="selectEnableItemPreviews">${LabelEnableItemPreviews}</label>
+                            <select id="selectEnableItemPreviews" data-mini="true">
+                                <option value="true">${OptionYes}</option>
+                                <option value="false">${OptionNo}</option>
+                            </select>
+                            <div>${LabelEnableItemPreviewsHelp}</div>
+                        </div>
+
+                        <br />
+                        <div>
                             <fieldset data-role="controlgroup">
                                 <legend>${LabelExternalPlayers}</legend>
                                 <input type="checkbox" id="chkExternalVideoPlayer" />
