fix web project

--- a/MediaBrowser.WebDashboard/dashboard-ui/metadatasubtitles.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/metadatasubtitles.html
@@ -53,7 +53,7 @@
                         </li>
                         <li>
                             <label for="txtOpenSubtitlePassword">${LabelOpenSubtitlesPassword}</label>
-                            <input type="password" id="txtOpenSubtitlePassword" />
+                            <input type="password" id="txtOpenSubtitlePassword" autocomplete="off" />
                         </li>
                     </ul>
                     <ul data-role="listview" class="ulForm">
