--- a/MediaBrowser.WebDashboard/dashboard-ui/tvlatest.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvlatest.html
@@ -19,7 +19,7 @@
             <div class="ehsContent">
                 <div>
                     <h1 class="listHeader firstListHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestEpisodes}</h1>
-                    <a href="#" class="accentButton categorySyncButton" data-category="Latest"><i class="fa fa-cloud"></i>${ButtonSync}</a>
+                    <a href="#" class="accentButton categorySyncButton" data-category="Latest"><i class="fa fa-refresh"></i>${ButtonSync}</a>
                 </div>
                 <div id="latestEpisodes" class="itemsContainer">
                 </div>
