--- a/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
@@ -29,7 +29,7 @@
                 <div id="resumableSection" style="display: none;" class="scopedContent homePageSection">
                     <div>
                         <h1 class="listHeader firstListHeader" style="display:inline-block;vertical-align:middle;">${HeaderResume}</h1>
-                        <a href="#" class="accentButton categorySyncButton" data-category="Resume"><i class="fa fa-cloud"></i>${ButtonSync}</a>
+                        <a href="#" class="accentButton categorySyncButton" data-category="Resume"><i class="fa fa-refresh"></i>${ButtonSync}</a>
                     </div>
 
                     <div id="resumableItems" class="itemsContainer">
@@ -39,7 +39,7 @@
                 <div class="homePageSection">
                     <div>
                         <h1 class="listHeader nextUpHeader" style="display:inline-block;vertical-align:middle;">${HeaderNextUp}</h1>
-                        <a href="#" class="accentButton categorySyncButton" data-category="NextUp"><i class="fa fa-cloud"></i>${ButtonSync}</a>
+                        <a href="#" class="accentButton categorySyncButton" data-category="NextUp"><i class="fa fa-refresh"></i>${ButtonSync}</a>
                     </div>
                     <div id="nextUpItems" class="itemsContainer">
                     </div>
