--- a/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
@@ -137,7 +137,7 @@
                         <p id="itemLinks"></p>
                         <div class="detailButtonsContainer desktopDetailButtons" style="text-align: left;">
                             <button class="btnPlay hide" type="button" data-icon="play" data-inline="true" data-mini="true">${ButtonPlay}</button>
-                            <a class="btnSync hide" data-role="button" data-icon="cloud" data-inline="true" data-mini="true" href="#">${ButtonSync}</a>
+                            <a class="btnSync hide" data-role="button" data-icon="refresh" data-inline="true" data-mini="true" href="#">${ButtonSync}</a>
                             <button class="btnMoreCommands hide jqmButtonNoText" type="button" data-icon="ellipsis-v" data-inline="true" data-mini="true" data-iconpos="notext">${ButtonMore}</button>
                         </div>
                     </td>
@@ -146,7 +146,7 @@
         </div>
         <div class="detailButtonsContainer mobileDetailButtons">
             <button class="btnPlay hide" type="button" data-icon="play" data-inline="true" data-mini="true">${ButtonPlay}</button>
-            <a class="btnSync hide" data-role="button" data-icon="cloud" data-inline="true" data-mini="true" href="#">${ButtonSync}</a>
+            <a class="btnSync hide" data-role="button" data-icon="refresh" data-inline="true" data-mini="true" href="#">${ButtonSync}</a>
             <button class="btnMoreCommands hide jqmButtonNoText" type="button" data-icon="ellipsis-v" data-inline="true" data-mini="true" data-iconpos="notext">${ButtonMore}</button>
         </div>
         <p class="itemOverview mobileOverview"></p>
