--- a/MediaBrowser.WebDashboard/dashboard-ui/syncsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/syncsettings.html
@@ -4,7 +4,7 @@
     <title>${TitleSync}</title>
 </head>
 <body>
-    <div id="syncSettingsPage" data-role="page" class="page type-interior syncConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Sync">
+    <div id="syncSettingsPage" data-role="page" class="page type-interior syncConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Sync" data-require="scripts/syncsettings">
 
         <div data-role="content">
             <div class="content-primary">
@@ -58,9 +58,6 @@
                 </form>
             </div>
         </div>
-        <script type="text/javascript">
-            $('.syncSettingsForm').off('submit', SyncSettingsPage.onSubmit).on('submit', SyncSettingsPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
