remove probing of live tv feeds

--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
@@ -192,6 +192,16 @@
                             </select>
                             <div>${LabelEnableItemPreviewsHelp}</div>
                         </div>
+                        
+                        <div class="fldFullscreen">
+                            <br />
+                            <div>
+                                <div data-role="controlgroup">
+                                    <label for="chkEnableFullScreen">${LabelEnableFullScreen}</label>
+                                    <input type="checkbox" id="chkEnableFullScreen" />
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
