--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
@@ -4,7 +4,7 @@
     <title>${TitleLiveTV}</title>
 </head>
 <body>
-    <div id="liveTvSettingsPage" data-role="page" class="page type-interior liveTvSettingsPage liveTvPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Live%20TV">
+    <div id="liveTvSettingsPage" data-role="page" class="page type-interior liveTvSettingsPage liveTvPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Live%20TV" data-require="scripts/livetvsettings">
 
         <div data-role="content">
             <div class="content-primary">
@@ -70,10 +70,6 @@
                 </div>
             </div>
         </div>
-
-        <script type="text/javascript">
-            $('.liveTvSettingsForm').off('submit', LiveTvSettingsPage.onSubmit).on('submit', LiveTvSettingsPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
