--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardagreement.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardagreement.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="wizardAgreementPage" data-role="page" class="page standalonePage wizardPage">
+    <div id="wizardAgreementPage" data-role="page" class="page standalonePage wizardPage" data-require="scripts/wizardagreement">
 
         <div data-role="content">
 
@@ -36,10 +36,6 @@
             </div>
 
         </div>
-
-        <script type="text/javascript">
-            $('.wizardAgreementForm').off('submit', WizardAgreementPage.onSubmit).on('submit', WizardAgreementPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
