--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardfinish.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardfinish.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="wizardFinishPage" data-role="page" class="page standalonePage wizardPage">
+    <div id="wizardFinishPage" data-role="page" class="page standalonePage wizardPage" data-require="scripts/wizardfinishpage">
 
         <div data-role="content">
 
@@ -39,7 +39,7 @@
                 
                 <div class="wizardNavigation">
                     <button type="button" data-iconpos="left" data-icon="arrow-l" data-inline="true" onclick="history.back();">${LabelPrevious}</button>
-                    <button type="button" data-iconpos="right" data-icon="check" data-inline="true" onclick="WizardFinishPage.onFinish();" data-theme="b">${LabelFinish}</button>
+                    <button type="button" data-iconpos="right" data-icon="check" data-inline="true" class="btnWizardNext" data-theme="b">${LabelFinish}</button>
                 </div>
             </div>
 
