--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemimages.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemimages.html
@@ -6,7 +6,7 @@
 <body>
     <div id="editItemImagesPage" data-role="page" class="page libraryPage metadataEditorPage" data-contextname="${HeaderMetadataManager}" data-require="scripts/edititemimages">
         <div data-role="content editPageContent">
-            <div class="editPageSidebar">
+            <div class="editPageSidebar smoothScrollY">
                 <div class="libraryTree">
                     <ul></ul>
                 </div>
