--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemsubtitles.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemsubtitles.html
@@ -6,10 +6,9 @@
 <body>
     <div id="editItemSubtitlesPage" data-role="page" class="page libraryPage metadataEditorPage" data-contextname="${HeaderMetadataManager}">
         <div data-role="content editPageContent">
-            <div class="editPageSidebar">
+            <div class="editPageSidebar smoothScrollY">
                 <div class="libraryTree">
-                    <ul>
-                    </ul>
+                    <ul></ul>
                 </div>
             </div>
             <div class="editPageInnerContent">
