--- a/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
@@ -129,7 +129,7 @@
                             <span class="userDataIcons"></span>
                         </p>
                         <p class="itemGenres"></p>
-                        <p class="itemOverview desktopOverview"></p>
+                        <p class="itemOverview desktopOverview smoothScrollY"></p>
                         <p id="itemBirthday"></p>
                         <p id="itemBirthLocation"></p>
                         <p id="itemDeathDate"></p>
@@ -149,7 +149,7 @@
             <a class="btnSync hide" data-role="button" data-icon="refresh" data-inline="true" data-mini="true" href="#">${ButtonSync}</a>
             <button class="btnMoreCommands hide jqmButtonNoText" type="button" data-icon="ellipsis-v" data-inline="true" data-mini="true" data-iconpos="notext">${ButtonMore}</button>
         </div>
-        <p class="itemOverview mobileOverview"></p>
+        <p class="itemOverview mobileOverview smoothScrollY"></p>
         <div data-role="content" style="padding-top: 0;">
 
             <div id="itemTabs" style="text-align: center; margin: 0 0 1em;"></div>
