--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -177,7 +177,7 @@
                         </div>
                         <p id="artist"></p>
                         <p class="itemGenres"></p>
-                        <p class="itemOverview"></p>
+                        <p class="itemOverview smoothScrollY"></p>
                         <p id="seriesAirTime"></p>
                     </div>
                 </div>
