--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
@@ -22,13 +22,13 @@
                             <a href="#popupConfig" data-rel="popup" class="accentButton" style="display:block;padding-left:5px;"><i class="fa fa-calendar"></i><span class="currentDate"></span></a>
                         </div>
                     </div>
-                    <div class="timeslotHeaders"></div>
+                    <div class="timeslotHeaders hiddenScrollX"></div>
                 </div>
 
                 <div class="programContainer">
 
                     <div class="channelList"></div>
-                    <div class="programGrid"></div>
+                    <div class="programGrid hiddenScrollX"></div>
                 </div>
                 <div class="channelPaging"></div>
             </div>
