--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvnewrecording.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvnewrecording.html
@@ -22,7 +22,7 @@
                     <span class="itemCommunityRating"></span>
                 </p>
                 <p class="itemGenres"></p>
-                <p class="itemOverview"></p>
+                <p class="itemOverview smoothScrollY"></p>
 
                 <br />
 
