--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvtimer.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvtimer.html
@@ -29,7 +29,7 @@
                         <p class="itemGenres"></p>
                     </div>
                 </div>
-                <p class="itemOverview"></p>
+                <p class="itemOverview smoothScrollY"></p>
 
                 <p style="margin-top: 2em;">
                     <span class="timerStatus"></span>
