--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -144,7 +144,7 @@
         </div>
 
         <div class="chapterMenuOverlay" style="display: none;"></div>
-        <div class="chapterMenu" style="display: none;">
+        <div class="chapterMenu hiddenScrollX" style="display: none;">
             <div class="chapterMenuInner">
             </div>
         </div>
