--- a/MediaBrowser.WebDashboard/dashboard-ui/dlnaprofiles.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dlnaprofiles.html
@@ -4,7 +4,7 @@
     <title>${TitleDlna}</title>
 </head>
 <body>
-    <div id="dlnaProfilesPage" data-role="page" class="page type-interior dlnaPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Dlna%20profiles">
+    <div id="dlnaProfilesPage" data-role="page" class="page type-interior dlnaPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Dlna%20profiles" data-require="scripts/dlnaprofiles">
 
         <div data-role="content">
             <div class="content-primary">
