--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
@@ -6,7 +6,7 @@
 <body>
     <div id="editItemMetadataPage" data-role="page" class="page libraryPage metadataEditorPage" data-contextname="${HeaderMetadataManager}">
         <div data-role="content editPageContent">
-            <div class="editPageSidebar">
+            <div class="editPageSidebar smoothScrollY">
                 <div class="libraryTree">
                     <ul></ul>
                 </div>
