--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvrecording.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvrecording.html
@@ -29,13 +29,13 @@
                                 <span class="userDataIcons"></span>
                             </p>
                             <p class="itemGenres desktopGenres"></p>
-                            <p class="itemOverview desktopOverview"></p>
+                            <p class="itemOverview desktopOverview smoothScrollY"></p>
                         </td>
                     </tr>
                 </table>
             </div>
             <p class="itemGenres mobileGenres"></p>
-            <p class="itemOverview mobileOverview"></p>
+            <p class="itemOverview mobileOverview smoothScrollY"></p>
         </div>
         <div class="detailButtonsContainer">
             <span id="playButtonContainer" style="display: none;">
