--- a/MediaBrowser.WebDashboard/dashboard-ui/metadatanfo.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/metadatanfo.html
@@ -4,7 +4,7 @@
     <title>${TitleMetadata}</title>
 </head>
 <body>
-    <div id="metadataNfoPage" data-role="page" class="page type-interior metadataConfigurationPage">
+    <div id="metadataNfoPage" data-role="page" class="page type-interior metadataConfigurationPage" data-require="scripts/metadatanfo">
 
         <div data-role="content">
 
@@ -70,10 +70,6 @@
             </div>
 
         </div>
-
-        <script type="text/javascript">
-            $('.metadataNfoForm').off('submit', NfoMetadataPage.onSubmit).on('submit', NfoMetadataPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
