--- a/MediaBrowser.WebDashboard/dashboard-ui/scheduledtask.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/scheduledtask.html
@@ -4,7 +4,7 @@
     <title>${TitleScheduledTasks}</title>
 </head>
 <body>
-    <div id="scheduledTaskPage" data-role="page" class="page type-interior scheduledTasksConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Scheduled%20tasks">
+    <div id="scheduledTaskPage" data-role="page" class="page type-interior scheduledTasksConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Scheduled%20tasks" data-require="scripts/scheduledtaskpage">
         <div data-role="content">
             <div class="content-primary">
 
@@ -91,9 +91,6 @@
                 </div>
             </form>
         </div>
-        <script type="text/javascript">
-            $('.addTriggerForm').off('submit', ScheduledTaskPage.onSubmit).on('submit', ScheduledTaskPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
