--- a/MediaBrowser.WebDashboard/dashboard-ui/scheduledtasks.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/scheduledtasks.html
@@ -4,7 +4,7 @@
     <title>${TitleScheduledTasks}</title>
 </head>
 <body>
-    <div id="scheduledTasksPage" data-role="page" class="page type-interior scheduledTasksConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Scheduled%20tasks">
+    <div id="scheduledTasksPage" data-role="page" class="page type-interior scheduledTasksConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Scheduled%20tasks" data-require="scripts/scheduledtaskspage">
         <div data-role="content">
             <div class="content-primary">
 
